2008-03-20  Tyler Romeo  <tylerromeo@gmail.com>

	*app/models/Request.py (Request.putInfo): Function now updates 
changes to database, or loads the request if not loaded yet.

	Created simple bootstrapper in root directory.

2008-03-18  Tyler Romeo  <tylerromeo@gmail.com>

	Created draft Request model.

	Added config and scripts file.

	*app/models/Database.py (Database.updateFromFile, Database.updateToFile()): Fixed error caused when copying and pasting code.
	Added new functions to interact with database.

2008-03-17  Tyler Romeo  <tylerromeo@gmail.com>

	Created general file and directory structure.
	Created draft Config and Database models.

	WARNING: CODE NOT TESTED AND DOES NOT WORK